labs/aula07/dep-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql
  name: mysql
  namespace: 4labs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  strategy: {}
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        resources:
          requests:
            memory: "64Mi"
            cpu: "0.2"
          limits:
            memory: "512Mi"
            cpu: "0.4"
        readinessProbe:
          exec:
            command:
            - bash
            - "-c"
            - |
              set -ex
              mysql -u$MYSQL_USER -p$MYSQL_PASSWORD -e 'SELECT 1' &> /dev/null
          initialDelaySeconds: 5
          periodSeconds: 2
          timeoutSeconds: 1
        volumeMounts:
        - name: claim-nfs-mysql
          mountPath: /var/lib/mysql

        - name: mysql-db-config
          mountPath: /docker-entrypoint-initdb.d/

        - name: dump-usuarios
          mountPath: /dump/

      volumes:
        - name: claim-nfs-mysql
          persistentVolumeClaim:
            claimName: claim-nfs-mysql

        - name: mysql-db-config
          configMap:
            name: mysql-db-config

        - name: dump-usuarios
          configMap:
            name: dump-usuarios
