labs/aula07/tls-ingress-app.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
      - app.4labs.example
    secretName: certificado-app-tls
  rules:
  - host: app.4labs.example
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app
            port:
              number: 8080
